Feature: revert alert processor to scheduled (ALFA-206)
Closes ALFA-206

Reviewed-by: Szymon Mrozowski <smrozowski@silenteight.com>
Reviewed-by: Sławomir Korbas <skorbas@silenteight.com>
Merged from: https://gitlab.silenteight.com/sens/scb-bridge/-/merge_requests/117